--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+body {
+  background-color: rgb(252, 235, 235);
+}
+
+.home, .about, .contact {
+  padding: 20px;
+  color: rgb(88, 39, 72);
+}
+.home h2, .about h4 {
+  padding: 10px;
+}
+.contact h4 {
+  padding: 0;
+}
+.home p {
+  padding: 10px;
+}
+.about div {
+  font-size: 40px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.contact p {
+  padding-top: 20px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.contact ul {
+  list-style: none;
+  padding-top: 20px;
 }
